updated overflow issue on mobile

--- a/css/sections/projects-section.css
+++ b/css/sections/projects-section.css
@@ -2,7 +2,8 @@
 
 .projects {
     width: 100%;
-    height: 60vh;
+    height: 100%;
+    padding: 50px;
     background-color: #f5f7fa;
     justify-content: center;
     margin: auto;
@@ -16,6 +17,7 @@
 
 .project-cards {
     width: 90%;
+    height: 100%;
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-gap: 30px;
