--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,7 @@
     padding: 0;
     margin: 0;
     font-family: 'Roboto', 'Helvetica', Ariel, sans-serif;
+    overflow-x: hidden;
 
 }
 
